--- a/src/components/CharacterGrid.css
+++ b/src/components/CharacterGrid.css
@@ -7,8 +7,14 @@ li, img{
     cursor: pointer;
 }
 
+.grid img{ 
+    margin: 0, auto;
+    margin-bottom: 5px;
+}
+
 ul {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
+    margin: 0 auto;
 }
+
