--- a/src/components/EventList.css
+++ b/src/components/EventList.css
@@ -5,7 +5,7 @@
 
 
 .events{
-    width: 40%;
+    width: 30%;
     margin: 0 auto;
     font-size: 20px;
     margin-bottom: 40px;
@@ -14,5 +14,12 @@
 
 .events h2{
     margin: 5px;
-    margin-top: 20px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+
+.events h2, .events li{
+    background-color: rgb(253, 244, 201, 0.6);
+    padding: 5px;
 }
